--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -6,15 +6,24 @@
   </ion-toolbar>
 </ion-header>
 
+
 <ion-content>
+  <ion-item>
+    <ion-label>Data</ion-label>
+    <ion-datetime display-format="DD de MMM de YYYY" picker-format="DD MM YYYY" min="2019-10-15" max="2019-12-15"
+      value="2019-12-15"
+      monthShortNames="janeiro, fevereiro, março, abril, maio, junho, julho, agosto, setembro, outubro, novembro, dezembro">
+    </ion-datetime>
+  </ion-item>
+
   <ion-card>
-    <ion-card-header>
-      <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
-    </ion-card-header>
-    
     <ion-card-content>
-      Keep close to Nature's heart... and break clear away, once in awhile,
-      and climb a mountain or spend a week in the woods. Wash your spirit clean.
+      <ion-card-subtitle>Avisos</ion-card-subtitle>
+      <p>Aviso 1</p>
+      <p>Aviso 2</p>
     </ion-card-content>
-  </ion-card>  
+  </ion-card>
+
+
+
 </ion-content>
