--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,1 +1,9 @@
-
+ion-card{
+    background-color: #006B67;
+}
+p, ion-card-subtitle{
+    color: white;
+}
+.BtnCentro{
+    justify-self: center;
+}
