PG Informes abrindo
Aleluuia irmãos, o código pegou

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -8,21 +8,33 @@
 
 
 <ion-content>
-  <ion-item>
+
+
+  <ion-fab horizontal="end" vertical="top" slot="fixed" edge>
+    <ion-fab-button>
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
+  <!-- Escolher data, pode ser útil
+    <ion-item>
     <ion-label>Data</ion-label>
     <ion-datetime display-format="DD de MMM de YYYY" picker-format="DD MM YYYY" min="2019-10-15" max="2019-12-15"
       value="2019-12-15"
       monthShortNames="janeiro, fevereiro, março, abril, maio, junho, julho, agosto, setembro, outubro, novembro, dezembro">
     </ion-datetime>
-  </ion-item>
+  </ion-item> -->
+
+
 
   <ion-card *ngFor="let aviso of avisos">
-    <ion-card-content>
-      <ion-card-subtitle>Informes dia: {{aviso.data}}</ion-card-subtitle>
+    <ion-card-content (click)="presentModal('a')">
+      <ion-card-subtitle>Dia {{aviso.data}}</ion-card-subtitle>
       <p>Idas ao banheiro: {{ aviso.banheiro }}</p>
       <p>Alimentação: {{ aviso.alimentacao }}</p>
       <p>Água: {{ aviso.agua }}</p>
     </ion-card-content>
   </ion-card>
+
 
 </ion-content>
