Modal detalhes tab4
Criei o Modal para obter mais informações em cada card do Calendário (TAB4)

--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-card class="evento">
+  <ion-card class="evento" (click)="teste()">
     <ion-card-content>
       <ion-row wrap>
         <ion-col size="4.5">
