--- a/src/app/informe/informe.page.html
+++ b/src/app/informe/informe.page.html
@@ -1,3 +1,5 @@
+<!--Página de informações dos dias da página innformes-->
+
 <ion-header>
   <ion-toolbar [color]="colorStatus?'toolbar-color':'medium'">
     <ion-buttons slot="end">
@@ -5,11 +7,12 @@
         <ion-icon slot="icon-only" name="close"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title>informe</ion-title>
+    <ion-title>Informes do dia </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <h1>{{ this.Data.data }}</h1>
+  <h2>{{ this.info.data }}</h2>
+  <h1>{{ this.info.agua }}</h1>
 
 </ion-content>
