--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -7,43 +7,16 @@
 </ion-header>
 
 <ion-content>
-  <ion-card class="evento" (click)="teste()">
-    <ion-card-content>
-      <ion-row wrap>
-        <ion-col size="4.5">
-          <h6>15/12-15/01</h6>
-          <ion-card-subtitle>Recesso</ion-card-subtitle>
-        </ion-col>
-        <ion-col size="7.5">
-          <p>Se você está vendo esse card significa que algo deu certo</p>
-        </ion-col>
-      </ion-row>
-    </ion-card-content>
-  </ion-card>
 
-  <ion-card class="evento">
+  <ion-card *ngFor="let evento of eventos" class="evento" (click)="presentModal(evento)">
     <ion-card-content>
       <ion-row wrap>
         <ion-col size="4.5">
-          <h6>15/12-15/01</h6>
-          <ion-card-subtitle>Recesso</ion-card-subtitle>
+          <h6>{{ evento.data }}</h6>
+          <ion-card-subtitle>{{evento.nome}}</ion-card-subtitle>
         </ion-col>
         <ion-col size="7.5">
-          <p>Se você está vendo esse card significa que algo deu certo</p>
-        </ion-col>
-      </ion-row>
-    </ion-card-content>
-  </ion-card>
-
-  <ion-card class="evento">
-    <ion-card-content>
-      <ion-row wrap>
-        <ion-col size="4.5">
-          <h6>15/12-15/01</h6>
-          <ion-card-subtitle>Recesso</ion-card-subtitle>
-        </ion-col>
-        <ion-col size="7.5">
-          <p>Se você está vendo esse card significa que algo deu certo</p>
+          <p>{{evento.mensagem}}</p>
         </ion-col>
       </ion-row>
     </ion-card-content>
