--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -8,30 +8,12 @@
 
 <ion-content>
 
-  <ion-card class="aviso">
+  <ion-card class="aviso" *ngFor="let noticia of noticias" (click)="presentModal(noticia)">
     <ion-card-header>
-      <ion-card-subtitle>Aviso: Novos módulos</ion-card-subtitle>
+      <ion-card-subtitle>{{noticia.nome}}</ion-card-subtitle>
     </ion-card-header>
     <ion-card-content>
-      <p>Estamos disponibilizando novos tipos de módulos para encomendas</p>
-    </ion-card-content>
-  </ion-card>
-
-  <ion-card class="aviso">
-    <ion-card-header>
-      <ion-card-subtitle>Aviso: Novos módulos</ion-card-subtitle>
-    </ion-card-header>
-    <ion-card-content>
-      <p>Estamos disponibilizando novos tipos de módulos para encomendas</p>
-    </ion-card-content>
-  </ion-card>
-
-  <ion-card class="aviso">
-    <ion-card-header>
-      <ion-card-subtitle>Aviso: Novos módulos</ion-card-subtitle>
-    </ion-card-header>
-    <ion-card-content>
-      <p>Estamos disponibilizando novos tipos de módulos para encomendas</p>
+      <p>{{noticia.mensagem}}</p>
     </ion-card-content>
   </ion-card>
 </ion-content>
