--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -5,5 +5,16 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-list>
+    <ion-item *ngFor="let mensagem of mensagens" (click)="presentModal(mensagem)">
+      <ion-avatar slot="start">
+        <img src="{{ mensagem.perfil }}">
+      </ion-avatar>
+      <ion-label>
+        <h2>{{ mensagem.nome }}</h2>
+        <h3>{{mensagem.assunto}}</h3>
+        <p>{{mensagem.mensagem}}</p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
