--- a/src/app/noticias/noticias.page.html
+++ b/src/app/noticias/noticias.page.html
@@ -5,12 +5,12 @@
         <ion-icon slot="icon-only" name="close"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title>{{this.info.nome}} </ion-title>
+    <ion-title>{{this.info.Nome}} </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <h2>{{ this.info.data }}</h2>
-  <h1>{{ this.info.mensagem }}</h1>
+  <h1>{{ this.info.Mensagem }}</h1>
 
 </ion-content>
