Login Front avançado
Está dando erro na rota do botão. Não consegue ir pra TABS

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,9 +1,27 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="fn-img">
+  <div>
 
-<ion-content>
+
+  </div>
+  <div class="input">
+    <ion-card>
+      <ion-item>
+        <ion-input type="text" placeholder="Email"></ion-input>
+      </ion-item>
+    </ion-card>
+
+    <ion-card>
+      <ion-item>
+        <ion-input type="password" placeholder="Senha"></ion-input>
+      </ion-item>
+    </ion-card>
+
+    <div>
+
+      <ion-button  class="btnLogin" expand="block" color="primary">Login</ion-button>
+      
+      <ion-button  fill="clear" color="secondary"expand="block" color="primary">Esqueceu a senha?</ion-button>
+    </div>
+  </div>
 
 </ion-content>
