--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,5 +1,5 @@
 .fn-img{
-    --background: url("../../assets/background-login.jpg") no-repeat center center / cover;
+    --background: url("../../assets/background-login.png") no-repeat center center / cover;
     //  DEU ERRO. MODIFICAR DEPOIS:
         //  -webkit-filter: blur(10px);
         //  -moz-filter: blur(10px);
