--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -1,20 +1,20 @@
 <ion-header>
-  <ion-toolbar [color]="colorStatus?'toolbar-color':'medium'">
-    <ion-title>Mensagens</ion-title>
-  </ion-toolbar>
+    <ion-toolbar [color]="colorStatus?'toolbar-color':'medium'">
+        <ion-title>Mensagens</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-list>
-    <ion-item *ngFor="let mensagem of mensagens" (click)="presentModal(mensagem)">
-      <ion-avatar slot="start">
-        <img src="{{ mensagem.perfil }}">
-      </ion-avatar>
-      <ion-label>
-        <h2>{{ mensagem.nome }}</h2>
-        <h3>{{mensagem.assunto}}</h3>
-        <p>{{mensagem.mensagem}}</p>
-      </ion-label>
-    </ion-item>
-  </ion-list>
+    <ion-list>
+        <ion-item *ngFor="let mensagem of mensagens | async" (click)="presentModal(mensagem)">
+            <ion-avatar slot="start">
+                <img src="{{ mensagem.foto }}">
+            </ion-avatar>
+            <ion-label>
+                <h2>{{ mensagem.remetente }}</h2>
+                <h3>{{mensagem.assunto}}</h3>
+                <p>{{mensagem.mensagem}}</p>
+            </ion-label>
+        </ion-item>
+    </ion-list>
 </ion-content>
