--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,12 +4,20 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #3880ff;
+  --ion-color-primary: #006B67;
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
   --ion-color-primary-shade: #3171e0;
   --ion-color-primary-tint: #4c8dff;
+
+  /** medium **/
+  --ion-color-medium: linear-gradient(to right, #006B67, #51ABA7);
+  --ion-color-medium-rgb: 0, 107, 103;
+  --ion-color-medium-contrast: #ffffff;
+  --ion-color-medium-contrast-rgb: 255, 255, 255;
+  --ion-color-medium-shade: rgb(12, 85, 82);
+  --ion-color-medium-tint: #a2a4ab;
 
   /** secondary **/
   --ion-color-secondary: #0cd1e8;
@@ -58,14 +66,6 @@
   --ion-color-dark-contrast-rgb: 255, 255, 255;
   --ion-color-dark-shade: #1e2023;
   --ion-color-dark-tint: #383a3e;
-
-  /** medium **/
-  --ion-color-medium: linear-gradient(to right, #006B67, #51ABA7);
-  --ion-color-medium-rgb: 0, 107, 103;
-  --ion-color-medium-contrast: #ffffff;
-  --ion-color-medium-contrast-rgb: 255, 255, 255;
-  --ion-color-medium-shade: rgb(12, 85, 82);
-  --ion-color-medium-tint: #a2a4ab;
 
   /** light **/
   --ion-color-light: #f4f5f8;
