--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -8,8 +8,8 @@
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-shade: rgb(32, 124, 119);
+  --ion-color-primary-tint: #51ABA7;
 
   /** medium **/
   --ion-color-medium: linear-gradient(to right, #006B67, #51ABA7);
