--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -12,7 +12,8 @@
         <ion-card-content>
             <ion-row wrap>
                 <ion-col size="4.5">
-                    <h6>{{ evento.datahora-inicio }} - {{ evento.datahora-fim }}</h6>
+                    <h6>De {{evento.datainicio.toDate() | date: 'dd/MM/yyyy'}}</h6>
+                    <h6>a {{evento.datainicio.toDate() | date: 'dd/MM/yyyy'}}</h6>
                     <ion-card-subtitle>{{evento.nome}}</ion-card-subtitle>
                 </ion-col>
                 <ion-col size="7.5">
