--- a/src/app/informe/informe.page.html
+++ b/src/app/informe/informe.page.html
@@ -1,18 +1,17 @@
-<!--Página de informações dos dias da página innformes-->
 
 <ion-header>
-  <ion-toolbar [color]="colorStatus?'toolbar-color':'medium'">
-    <ion-buttons slot="end">
-      <ion-button (click)="dismiss()">
-        <ion-icon slot="icon-only" name="close"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-title>Informes do dia </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
-  <h2>{{ this.info.data }}</h2>
-  <h1>{{ this.info.agua }}</h1>
-
-</ion-content>
+    <ion-toolbar [color]="colorStatus?'toolbar-color':'medium'">
+      <ion-buttons slot="end">
+        <ion-button (click)="dismiss()">
+          <ion-icon slot="icon-only" name="close"></ion-icon>
+        </ion-button>
+      </ion-buttons>
+      <ion-title>{{this.info.data.toDate() | date:'dd/MM/yyyy'}}</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  
+  <ion-content>
+    <h2>{{ this.info.data }}</h2>
+    <h1>{{ this.info.mensagem }}</h1>
+  
+  </ion-content>
