--- a/src/app/mensagem/mensagem.page.html
+++ b/src/app/mensagem/mensagem.page.html
@@ -5,7 +5,7 @@
         <ion-icon slot="icon-only" name="close"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title>{{ this.info.nome }} </ion-title>
+    <ion-title>{{ this.info.remetente }}: {{this.info.assunto}} </ion-title>
   </ion-toolbar>
 </ion-header>
 
