--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -6,10 +6,10 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content >
+<ion-content>
   <!--Mostra card para cada categoria-->
-  <ion-card *ngFor="let req of req">
-    <img class="emb"src="{{req.img}}" />
+  <ion-card *ngFor="let req of req" (click)="presentModal(req)">
+    <img class="emb" src="{{req.img}}" />
     <div class="card-title">{{req.tipo}}</div>
   </ion-card>
 </ion-content>
