Modais com respectivos htmls
nova pagina no ts com cada requisição que depois é puxada no modal

--- a/src/app/env-mensagem/env-mensagem.page.html
+++ b/src/app/env-mensagem/env-mensagem.page.html
@@ -12,22 +12,9 @@
 <ion-content>
   <ion-list>
     <ion-item>
-      <ion-label>Categorias</ion-label>
-      <ion-select placeholder="Select One" multiple>
-        <ion-select-option value="pais">Pais</ion-select-option>
-        <ion-select-option value="profissionais">Profissionais</ion-select-option>
-        <ion-select-option value="coordenacao">Coordenação</ion-select-option>
-      </ion-select>
-    </ion-item>
-    <ion-item>
       <ion-label>Destinatário</ion-label>
       <ion-select placeholder="Select One" multiple>
-        <ion-select-option value="f">Female</ion-select-option>
-        <ion-select-option value="m">juaum</ion-select-option>
-        <ion-select-option value="f">Female</ion-select-option>
-        <ion-select-option value="m">Male</ion-select-option>
-        <ion-select-option value="f">Female</ion-select-option>
-        <ion-select-option value="m">Male</ion-select-option>
+        <ion-select-option *ngFor="let pessoa of pessoas | async">{{pessoa.nome}}</ion-select-option>
       </ion-select>
     </ion-item>
 
