--- a/src/app/req/req.page.html
+++ b/src/app/req/req.page.html
@@ -5,10 +5,14 @@
         <ion-icon slot="icon-only" name="close"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title>{{tipo.tipo}} </ion-title>
+    <ion-title>{{tipo.tipo}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <div id="teste">
+
+
+  </div>
 
 </ion-content>
