--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -9,7 +9,7 @@
 <ion-content>
   <!--Mostra card para cada categoria-->
   <ion-card *ngFor="let req of req" (click)="presentModal(req)">
-    <img class="emb" src="{{req.img}}" />
+    <img class="img" src="{{req.img}}" />
     <div class="card-title">{{req.tipo}}</div>
   </ion-card>
 </ion-content>
