--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -5,6 +5,7 @@ ion-card {
 
 // Formatação do título
 .card-title {
+  text-shadow: 1px 2px 4px #000000;
   position: absolute;
   top: 36%;
   font-size: 2.0em;
@@ -14,7 +15,10 @@ ion-card {
 }
 
 // Efeito de 'embaçamento' na imagem
-.emb {
+.img {
+
+  height: 130px;
+
   -webkit-filter: blur(2px);
   -moz-filter: blur(2px);
   -o-filter: blur(2px);
