--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -7,8 +7,7 @@
 <ion-content>
     <ion-fab vertical="bottom" horizontal="end" slot="fixed">
         <ion-fab-button (click)="presentModal2()">
-            <ion-icon name=" add">
-            </ion-icon>
+            <ion-icon name="add"></ion-icon>
         </ion-fab-button>
     </ion-fab>
 
@@ -25,10 +24,10 @@
         </div>
 
         <ion-slides>
-            <ion-slide >
+            <ion-slide>
                 <div style=" width: 100%" class="slide-inner ion-padding">
                     <span>Recebidos</span>
-                    <ion-list >
+                    <ion-list>
                         <ion-item *ngFor="let mensagem of mensagensrec | async" (click)="presentModal(mensagem)">
                             <ion-label>
                                 <h3>{{mensagem.remetente}}: {{mensagem.assunto}}</h3>
