--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -8,7 +8,7 @@
 
 <ion-content>
 
-    <ion-card class="aviso" *ngFor="let noticia of noticias | async" (click)="presentModal(noticia)">
+    <ion-card class="aviso" *ngFor="let noticia of noticias | async" (click)="presentAlert(noticia)">
         <ion-card-header>
             <ion-card-subtitle>{{noticia.nome}}</ion-card-subtitle>
         </ion-card-header>
