--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,5 +1,5 @@
 ion-card{
-    background-color: #006B67;
+    background-color: rgb(0, 134, 130);
 }
 p, ion-card-subtitle{
     color: white;
@@ -7,3 +7,8 @@ p, ion-card-subtitle{
 .BtnCentro{
     justify-self: center;
 }
+.informe {
+    max-height: 130px;
+    overflow: hidden;
+    padding: 2px !important;
+  }
