--- a/src/app/req/req.page.html
+++ b/src/app/req/req.page.html
@@ -10,6 +10,6 @@
 </ion-header>
 
 <ion-content id="reqModal">
-
+    <ion-button (click)="sub()" expand="block" color="medium">Fazer pedido</ion-button>
 
 </ion-content>
