--- a/src/app/req/req.page.html
+++ b/src/app/req/req.page.html
@@ -9,7 +9,9 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content id="reqModal">
-  <ion-button (click)="sub()" expand="block" color="medium">Fazer pedido</ion-button>
+<ion-content>
+  <div id="reqModal">
+  </div>
+  <ion-button (click)="submit()" expand="block" color="medium">Enviar</ion-button>
 
 </ion-content>
