--- a/src/app/tab5/tab5.page.html
+++ b/src/app/tab5/tab5.page.html
@@ -30,8 +30,8 @@
                     <ion-list>
                         <ion-item *ngFor="let mensagem of mensagensrec | async" (click)="presentAlertConfirm(mensagem)">
                             <ion-label>
-                                <h3>{{mensagem.remetente}}: {{mensagem.assunto}}</h3>
-                                <p>{{mensagem.mensagem}}</p>
+                                <h3>{{mensagem.mRemetente}}: {{mensagem.mAssunto}}</h3>
+                                <p>{{mensagem.mConteudo}}</p>
                             </ion-label>
                         </ion-item>
                     </ion-list>
@@ -44,8 +44,8 @@
                     <ion-list>
                         <ion-item *ngFor="let mensagem of mensagensenv | async" (click)="presentAlertConfirm(mensagem)">
                             <ion-label>
-                                <h3>{{mensagem.assunto}}</h3>
-                                <p>{{mensagem.mensagem}}</p>
+                                <h3>{{mensagem.mAssunto}} para {{mensagem.mDestino}}</h3>
+                                <p>{{mensagem.mConteudo}}</p>
                             </ion-label>
                         </ion-item>
                     </ion-list>
