--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -12,11 +12,12 @@
         <ion-card-content>
             <ion-row wrap>
                 <ion-col size="4.5">
-                    <ion-card-subtitle>{{evento.nome}}</ion-card-subtitle>
-                    <h6>{{evento.datainicio.toDate() | date: 'dd/MM/yyyy'}}</h6>
-                    <h6>{{evento.datainicio.toDate() | date: 'dd/MM/yyyy'}}</h6>
+                    <h6 id="dataEvento">{{evento.datainicio.toDate() | date: 'dd/MM/yyyy'}}</h6>
+                    <h6>{{evento.datainicio.toDate() | date: 'HH:mm'}}</h6>
+
                 </ion-col>
                 <ion-col size="7.5">
+                    <ion-card-subtitle>{{evento.nome}}</ion-card-subtitle>
                     <p>{{evento.detalhes}}</p>
                 </ion-col>
             </ion-row>
